Fixed .add-container spacing

--- a/dashboard.css
+++ b/dashboard.css
@@ -12,6 +12,7 @@ h3 {
 input {
     border: 2px solid rgba(158, 171, 224, 0.992);
     border-radius: 20px;
+    width: 300px;
     background: rgba(255, 255, 255, 0.15);
     -webkit-backdrop-filter: blur(7px);
     backdrop-filter: blur(7px);
@@ -32,18 +33,25 @@ button {
 .dashboard-card {
     display: flex;
     flex-direction: column;
-    height: 150px; 
+    justify-content: space-between;
+    height: 300px;
+
     background: rgba(255, 255, 255, 0.15);
     -webkit-backdrop-filter: blur(7px);
     backdrop-filter: blur(7px);
     border: 2px solid rgba(158, 171, 224, 0.992);
     border-radius: 20px;
-    padding: 20px 200px 200px 200px;
+    padding: 20px;
     color: white;
+}
+
+.list-section {
+    height: 100px;
 }
 
 .add-container {
     display: flex;
+    justify-content: center;
     gap: 10px;
-    margin-top: auto;
+    /*margin-top: auto;*/
 }
